fix: deadlinks in docs

--- a/sites/docs.mockybalboa.com/docs/client/custom.mdx
+++ b/sites/docs.mockybalboa.com/docs/client/custom.mdx
@@ -132,4 +132,4 @@ Make sure to disconnect the client from the Mocky Balboa server when you are don
   </TabItem>
 </Tabs>
 
-[API reference](https://api-reference.mockybalboa.com/modules/_mocky-balboa_client.Client)
+[API reference](https://api-reference.mockybalboa.com/modules/_mocky-balboa_client.html)
