--- a/sites/docs.mockybalboa.com/docs/server/next-js.mdx
+++ b/sites/docs.mockybalboa.com/docs/server/next-js.mdx
@@ -132,7 +132,7 @@ You might prefer to use the `startServers` function programmatically, especially
   </TabItem>
 </Tabs>
 
-See [startServers API reference](https://api-reference.mockybalboa.com/functions/_mocky-balboa_next-js.startServers) for full documentation on how to use `startServers`.
+See [startServers API reference](https://api-reference.mockybalboa.com/functions/_mocky-balboa_next-js..startservers) for full documentation on how to use `startServers`.
 
 ## Working with Next.js caching
 
