fix: quiet mode now being passed from cli options

--- a/sites/docs.mockybalboa.com/docs/server/next-js.mdx
+++ b/sites/docs.mockybalboa.com/docs/server/next-js.mdx
@@ -73,7 +73,7 @@ The CLI tool will source your Next.js configuration file when you don't explicit
 --websocket-port [websocketPort]  Port to run the WebSocket server on (default: "58152")
 -h, --hostname [hostname]         Hostname to bind the server to (default: "localhost")
 -d, --dev                         Run the Next.js server in development mode (default: false)
--q, --quiet                       Quiet mode, when enabled suppresses Next.js logs (default: false)
+-q, --quiet                       Hide error messages containing server information (default: false)
 -t, --timeout [timeout]           Timeout in milliseconds for the mock server to receive a response from the client (default: "5000")
 --conf [conf]                     Relative or absolute path to the Next.js configuration file. Include the file extension. Defaults to
                                 discovering the path traversing up from the current working directory.
