--- a/sites/docs.mockybalboa.com/docs/server/next-js.mdx
+++ b/sites/docs.mockybalboa.com/docs/server/next-js.mdx
@@ -69,15 +69,19 @@ The CLI tool will source your Next.js configuration file when you don't explicit
 #### CLI options
 
 ```bash
--p, --port [port]                 Port to run the server on (default: "3000")
---websocket-port [websocketPort]  Port to run the WebSocket server on (default: "58152")
--h, --hostname [hostname]         Hostname to bind the server to (default: "localhost")
--d, --dev                         Run the Next.js server in development mode (default: false)
--q, --quiet                       Hide error messages containing server information (default: false)
--t, --timeout [timeout]           Timeout in milliseconds for the mock server to receive a response from the client (default: "5000")
---conf [conf]                     Relative or absolute path to the Next.js configuration file. Include the file extension. Defaults to
-                                discovering the path traversing up from the current working directory.
---help                            display help for command
+-p, --port [port]                     Port to run the server on (default: "3000")
+--websocket-port [websocketPort]      Port to run the WebSocket server on (default: "58152")
+-h, --hostname [hostname]             Hostname to bind the server to (default: "localhost")
+-d, --dev                             Run the Next.js server in development mode (default: false)
+-q, --quiet                           Hide error messages containing server information (default: false)
+-t, --timeout [timeout]               Timeout in milliseconds for the mock server to receive a response from the client (default: "5000")
+--conf [conf]                         Relative or absolute path to the Next.js configuration file. Include the file extension. Defaults to
+                                      discovering the path traversing up from the current working directory.
+--experimental-https                  Enable experimental HTTPS support (parity with Next.js flag of same name)
+--experimental-https-cert [certPath]  Optional path to the HTTPS certificate file (parity with Next.js flag of same name)
+--experimental-https-ca [caPath]      Optional path to the HTTPS Certificate Authority file (parity with Next.js flag of same name)
+--experimental-https-key [keyPath]    Optional path to the HTTPS key file (parity with Next.js flag of same name)
+--help                                display help for command
 ```
 
 ### Programmatically
@@ -96,9 +100,6 @@ You might prefer to use the `startServers` function programmatically, especially
             (options) => {
               return next({
                 ...options,
-                // If you want to enable experimental features that are available to enable via the options
-                // experimentalHttpsServer: true,
-                // experimentalTestProxy: true,
                 conf: nextConfig,
               });
             },
@@ -119,9 +120,6 @@ You might prefer to use the `startServers` function programmatically, especially
           (options) => {
             return next({
               ...options,
-              // If you want to enable experimental features that are available to enable via the options
-              // experimentalHttpsServer: true,
-              // experimentalTestProxy: true,
               conf: nextConfig,
             });
           },
