--- a/sites/docs.mockybalboa.com/docs/server/astro.mdx
+++ b/sites/docs.mockybalboa.com/docs/server/astro.mdx
@@ -180,6 +180,8 @@ Now serve your Astro application using the `mocky-balboa-astro` command.
 Run `mocky-balboa-astro --help` for usage options or see below for all options.
 
 ```bash
+Usage: mocky-balboa-astro [options] [dist-dir]
+
 Starts a Node.js http server powered by Express for your Astro application as well as the necessary mocky-balboa servers
 
 Arguments:
@@ -189,8 +191,13 @@ Options:
   -p, --port [port]                 Port to run the server on (default: "3000")
   --websocket-port [websocketPort]  Port to run the WebSocket server on (default: "58152")
   -h, --hostname [hostname]         Hostname to bind the server to (default: "0.0.0.0")
-  -b, --base [base]                 Change this based on your astro.config.mjs, `base` option. They should match. (default: "/")
   -t, --timeout [timeout]           Timeout in milliseconds for the mock server to receive a response from the client (default: "5000")
+  --https                           Enable https server. Either https or http server is run, not both. When no --https-cert and --https-key are
+                                    provided, a self-signed certificate will be automatically generated.
+  --https-cert [certPath]           Optional path to the https certificate file
+  --https-ca [caPath]               Optional path to the https Certificate Authority file
+  --https-key [keyPath]             Optional path to the https key file
+  -b, --base [base]                 Change this based on your astro.config.mjs, `base` option. They should match. (default: "/")
   --help                            display help for command
 ```
 
