--- a/sites/docs.mockybalboa.com/docs/server/react-router.mdx
+++ b/sites/docs.mockybalboa.com/docs/server/react-router.mdx
@@ -137,20 +137,24 @@ Now serve your React Router application using the `mocky-balboa-react-router` co
 Run `mocky-balboa-react-router --help` for usage options or see below for all options.
 
 ```bash
-Usage: mocky-balboa-react-router [options]
+Usage: mocky-balboa-react-router [options] [dist-dir]
 
 Starts a Node.js http server powered by Express for your React Router application as well as the necessary mocky-balboa servers
+
+Arguments:
+  dist-dir                          Path to the directory where your React Router application is built (default: "build")
 
 Options:
   -p, --port [port]                 Port to run the server on (default: "3000")
   --websocket-port [websocketPort]  Port to run the WebSocket server on (default: "58152")
   -h, --hostname [hostname]         Hostname to bind the server to (default: "0.0.0.0")
   -t, --timeout [timeout]           Timeout in milliseconds for the mock server to receive a response from the client (default: "5000")
-  --https                           Enable https server. Either https or http server is run, not both. When no --https-cert and --https-key are
-                                    provided, a self-signed certificate will be automatically generated.
+  --https                           Enable https server. Either https or http server is run, not both. When no --https-cert and --https-key are provided, a self-signed
+                                    certificate will be automatically generated.
   --https-cert [certPath]           Optional path to the https certificate file
   --https-ca [caPath]               Optional path to the https Certificate Authority file
   --https-key [keyPath]             Optional path to the https key file
+  -b, --basename [basename]         Change this based on your React Router config, `basename` option. They should match. (default: "/")
   --help                            display help for command
 ```
 
