docs: updated client and playwright documentation

--- a/sites/docs.mockybalboa.com/docs/advanced.mdx
+++ b/sites/docs.mockybalboa.com/docs/advanced.mdx
@@ -8,7 +8,7 @@ import TabItem from '@theme/TabItem';
 
 If you are interested in contributing to Mocky Balboa, or just want to learn more about how it works then read on! If you're looking to just get started, then go back to the [Getting Started](./getting-started) page.
 
-## Sequence flow diagram
+## Sequence flow diagram for server-side requests
 
 Below is a sequence flow diagram that illustrates the flow of a test in a browser automation framework interacting with your application server. The diagram shows what happens when the application server makes an outbound HTTP request to an external API and how the response is processed by the Mocky Balboa server and client.
 
