--- a/sites/docs.mockybalboa.com/docs/client/cypress.mdx
+++ b/sites/docs.mockybalboa.com/docs/client/cypress.mdx
@@ -110,7 +110,7 @@ Below is a basic example of how to use Mocky Balboa to mock a server-side networ
 
 ### Asserting on a request
 
-If you want to assert on a request made on the server you can use [client.waitForRequest](../client-guide#waiting-for-a-request).
+If you want to assert on a request made on the server you can use [client.waitForRequest](../client-guide/client#waiting-for-a-request).
 
 <Tabs groupId="javascript-language">
   <TabItem value="typescript" label="TypeScript" default>
@@ -177,5 +177,5 @@ If you want to assert on a request made on the server you can use [client.waitFo
 
 ## Further usage
 
-1. See [the client guide](../client-guide) for more information on how you can mock server-side network requests from directly within your Cypress tests.
+1. See [the client guide](../client-guide/client) for more information on how you can mock server-side network requests from directly within your Cypress tests.
 1. See [the advanced page](../advanced) for more information on advanced usage and how the framework works under the hood.
